==> ScarsFun/STM32F1_ST7735_LL_DMA/Src/st7735.c <==
#include "st7735.h"
#include "stdlib.h"
#define TFT_BL_H() LL_GPIO_SetOutputPin(ST7735_CS_GPIO_Port, ST7735_BL_Pin)
#define TFT_BL_L() LL_GPIO_ResetOutputPin(ST7735_CS_GPIO_Port, ST7735_BL_Pin)
#define TFT_CS_H() LL_GPIO_SetOutputPin(ST7735_CS_GPIO_Port, ST7735_CS_Pin)
#define TFT_CS_L() LL_GPIO_ResetOutputPin(ST7735_CS_GPIO_Port, ST7735_CS_Pin)
#define TFT_DC_D() LL_GPIO_SetOutputPin(ST7735_CS_GPIO_Port, ST7735_DC_Pin)
#define TFT_DC_C() LL_GPIO_ResetOutputPin(ST7735_CS_GPIO_Port, ST7735_DC_Pin)
#define TFT_RES_H() LL_GPIO_SetOutputPin(ST7735_CS_GPIO_Port, ST7735_RES_Pin)
#define TFT_RES_L() LL_GPIO_ResetOutputPin(ST7735_CS_GPIO_Port, ST7735_RES_Pin)
#define SWAP_INT16_T(a, b) \
    {                      \
        int16_t t = a;     \
        a = b;             \
        b = t;             \
    }
#define DELAY 0x80

static void ST7735_Reset()
{
    TFT_RES_L();
    LL_mDelay(20);
    TFT_RES_H();
}

static void ST7735_WriteCommand(uint8_t cmd)
{
    TFT_DC_C();
    Send_Data8(cmd);
}

static void ST7735_WriteData(uint8_t* buff, size_t buff_size)
{

    TFT_DC_D();

    for (uint16_t index = 0; index < buff_size; index++) {
        Send_Data8(buff[index]);
    }
}

static void ST7735_ExecuteCommandList(const uint8_t* addr)
{
    uint8_t numCommands, numArgs;
    uint16_t ms;

    numCommands = *addr++;
    while (numCommands--) {
        uint8_t cmd = *addr++;
        ST7735_WriteCommand(cmd);

        numArgs = *addr++;
        // If high bit set, delay follows args
        ms = numArgs & DELAY;
        numArgs &= ~DELAY;
        if (numArgs) {
            ST7735_WriteData((uint8_t*)addr, numArgs);
            addr += numArgs;
        }

        if (ms) {
            ms = *addr++;
            if (ms == 255)
                ms = 500;
            LL_mDelay(ms);
        }
    }
}

void ST7735_Init()
{
    //ST7735_GPIO_Init();
    TFT_CS_L();
    ST7735_Reset();
    ST7735_ExecuteCommandList(init_cmds1);
    ST7735_ExecuteCommandList(init_cmds2);
    ST7735_ExecuteCommandList(init_cmds3);
    TFT_CS_H();
}

void ST7735_Backlight_On(void)
{
    TFT_BL_H();
}

void ST7735_Backlight_Off(void)
{
    TFT_BL_L();
}
